--- a/matete-web/templates/base.html.twig
+++ b/matete-web/templates/base.html.twig
@@ -6,11 +6,7 @@
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
-            <link href="{{ asset('assets/style.css') }}" type="text/css" rel="stylesheet" />
-        {% endblock %}
-
-        {% block javascripts %}
-            <script src="{{ asset('assets/script.js') }}"></script>
+            <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
         {% endblock %}
     </head>
     <body>
