--- a/matete-web/templates/main/index.html.twig
+++ b/matete-web/templates/main/index.html.twig
@@ -23,8 +23,9 @@
     }
   </script>
 
-    <div class="bg-gray-400 w">
-      <div id="map" class="w-screen h-screen"></div>
+    <div class="bg-gray-400 p-12 h-screen w-screen">
+      <div id="map" class="bg-red-400 w-full h-full">
+      </div>
     </div>
     
     <script
