--- a/matete-web/templates/home_page/index.html.twig
+++ b/matete-web/templates/home_page/index.html.twig
@@ -3,5 +3,13 @@
 {% block title %}Hello HomePageController!{% endblock %}
 
 {% block body %}
-
+    <style>
+        .bgImage {
+            background-image: url('{{asset('./public/assets/images/carte.png')}}');
+        }
+    </style>
+    
+    <div class="bgImage">gi
+        
+    </div>
 {% endblock %}
