--- a/matete-web/templates/home_page/index.html.twig
+++ b/matete-web/templates/home_page/index.html.twig
@@ -3,13 +3,8 @@
 {% block title %}Hello HomePageController!{% endblock %}
 
 {% block body %}
-    <style>
-        .bgImage {
-            background-image: url('{{asset('./public/assets/images/carte.png')}}');
-        }
-    </style>
     
-    <div class="bgImage">gi
+    <div class="bgImage">
         
     </div>
 {% endblock %}
