--- a/matete-web/templates/main/index.html.twig
+++ b/matete-web/templates/main/index.html.twig
@@ -23,13 +23,30 @@
     }
   </script>
 
-    <div class="bg-gray-400 p-12 h-screen w-screen">
-      <div id="map" class="bg-red-400 w-full h-full">
-      </div>
-    </div>
+    <a href="{{ path('login_security') }}">
+      <button class="z-50 bg-yellow-200 w-20 h-20 absolute mt-16 ml-8 rounded-full border-yellow-900 border-4 border-opacity-25"><i class="fad fa-wheat fa-3x"></i><a href="{{ path('login_security') }}"></a></button>
+    </a>
+
+    <a href="{{ path('login_security') }}">
+      <button class="z-50 bg-yellow-200 w-20 h-20 top-0 right-0 absolute mt-16 mr-8 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('login_security') }}"><i class="fas fa-filter fa-2x mt-2 mr-0"></i></button>
+    </a>
     
+    <div class=" h-screen w-screen">
+      <div id="map" class="z-20 w-full h-full"></div>
+    </div>
+
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5t3C0OHeTuknC62DdKqOeqNPhMAhdITU&callback=initMap&libraries=&v=weekly"
       async>
     </script>
+
+<style>
+  button:hover{
+    -webkit-transform: rotate(360deg);
+    -webkit-transition-duration: 1s;
+    -webkit-transition-delay: now;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+  }
+</style>
 {% endblock %}
