--- a/matete-web/templates/security/register.html.twig
+++ b/matete-web/templates/security/register.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
  <h1>S'inscrire </h1>
 
- <form method="POST" action="{{ path('register_security') }}">
+ <form method="POST" action="{{ path('producteur_new') }}">
     <div>
     <div>
             <label for="nom">Nom</label>
