--- a/matete-web/templates/panel_prod/index.html.twig
+++ b/matete-web/templates/panel_prod/index.html.twig
@@ -55,8 +55,8 @@
     
     <div>
       {# Bouton pour déconnecter #}
-      <a href="{{ path('login_security') }}">
-        <button class="z-50 bg-yellow-200 w-20 h-20 right-0 absolute bottom-4 mr-16 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('login_security') }}"><i class="fas fa-sign-out fa-3x mr-0"></i></button>
+      <a href="{{ path('logout_security') }}">
+        <button class="z-50 bg-yellow-200 w-20 h-20 right-0 absolute bottom-4 mr-16 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('logout_security') }}"><i class="fas fa-sign-out fa-3x mr-0"></i></button>
       </a>
     </div>
     
