--- a/matete-web/templates/producteur/show.html.twig
+++ b/matete-web/templates/producteur/show.html.twig
@@ -27,16 +27,7 @@
                 <th>Mail</th>
                 <td>{{ producteur.mail }}</td>
             </tr>
-            <tr>
-                <th>Mdp</th>
-                <td>{{ producteur.mdp }}</td>
-            </tr>
         </tbody>
     </table>
-
-    <a href="{{ path('producteur_index') }}">back to list</a>
-
-    <a href="{{ path('producteur_edit', {'id': producteur.id}) }}">edit</a>
-
-    {{ include('producteur/_delete_form.html.twig') }}
+    {% include "include/retour.html.twig" %}
 {% endblock %}
