--- a/matete-web/templates/security/login.html.twig
+++ b/matete-web/templates/security/login.html.twig
@@ -3,26 +3,47 @@
 {% block title %}Hello MainController!{% endblock %}
 
 {% block body %}
- <h1> Se connecter </h1>
 
- <form method="POST" action="{{ path('login_security') }}">
-    <div>
-        <div>
-            <label for="Mail">Email</label>
-            <input type="mail" id="mail" name="mail" placeholder="Entrez un Email" required >
+  <form method="POST" action="{{ path('login_security') }}">
+        
+        
+        <div class="absolute w-screen h-screen flex flex-col ">
+            {# Logo Matete #}
+            <div class="flex justify-center m-16" >
+                <img class="w-3/12 h-3/12" src="{{ asset('image/logotexte.png') }}">
+            </div>
+            {# Formulaire de connexion #}
+            <div class="px-10 w-auto p-4 shadow-2xl mx-auto rounded-2xl bg-white justify-center">
+                <div class="px-10 w-96 p-4 mx-auto">
+                    {#  #}
+                    <div class="flex justify-center text-4xl font-extrabold">
+                        <h1>Connexion</h1>
+                    </div>
+                    {# Zone de saisie Email #}
+                    <div class="mt-5">
+                        <label for="Mail">Email :</label><br>
+                        <input type="mail" id="mail" name="mail" placeholder="Entrez un Email" class="border border-gray-400 border-opacity-50 shadow-md rounded my-1.5 h-9 w-full p-1 focus:outline-none " required>
+                    </div>
+                    {# Zone de saisie MDP #}    
+                    <div class="mt-5">
+                        <label for="pass">Mot de passe :</label>
+                        <input type="password" id="pass" name="pass" class="border border-gray-400 border-opacity-50 shadow-md rounded my-1.5 h-9 w-full p-1 focus:outline-none " placeholder="Saisir votre mot de passe" required>
+                    </div>
+                    {# Boutons de Connexion/Inscription #}
+                    <div class="mt-5 flex justify-between">
+                        <button class="w-5/12 p-2.5  bg-yellow-300 border-yellow-900 rounded-lg"><a href="{{ path('register_security') }}"> Inscription </a></button>
+                        <input type="submit" id="connexion" name="connexion" value="Connexion" class="w-5/12 p-2.5  bg-yellow-300 border-yellow-900 rounded-lg">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token('log_form') }}">
+                </div>
+                    {# Mot de passe oublié #}
+                    <div class="mt-5">
+                        <a href="#" class="text-sm underline text-gray-600"> Mot de passe oublié ?</a>
+                    </div>
+            </div>
+        </div> 
         </div>
-        <div>
-            <label for="pass">Mot de passe</label>
-            <input type="password" id="pass" name="pass" required>
-        </div>
-        <div>
-            <a href="#"> Mot de passe oublié </a>
-        </div>
-        <div>
-            <button><a href="{{ path('register_security') }}"> Inscription </a></button>
-            <input type="submit" id="connexion" name="connexion" value="Connexion">
-            <input type="hidden" name="csrf_token" value="{{ csrf_token('log_form') }}">
-        </div>
-    </div>
  </form>
+ {# Image de fond #}
+ <div class="h-screen w-screen bg-no-repeat bg-cover" style="background-image:url('{{ asset('image/Carte.png') }}')">
+    </div> 
 {% endblock %}
