--- a/matete-web/templates/security/register.html.twig
+++ b/matete-web/templates/security/register.html.twig
@@ -92,5 +92,6 @@
   {# Image de fond #}
  <div class="h-screen w-screen bg-no-repeat bg-cover" style="background-image:url('{{ asset('image/Carte.png') }}')"></div>
 
- {# {% include "include/retour.html.twig" %}  #}
+{% include "include/retour.html.twig" %}  
+
 {% endblock %}
