--- a/matete-web/templates/panel_prod/index.html.twig
+++ b/matete-web/templates/panel_prod/index.html.twig
@@ -42,21 +42,21 @@
     <div>
       {# Bouton panier #}
       <a href="{{ path('login_security') }}">
-        <button class="z-50 bg-yellow-200 w-20 h-20 absolute top-0 right-0 absolute mt-16 mr-32 rounded-full border-yellow-900 border-4 border-opacity-25"><i class="fas fa-shopping-basket fa-3x"></i><a href="{{ path('login_security') }}"></a></button>
+        <button class="rotate z-50 bg-yellow-200 w-20 h-20 absolute top-0 right-0 absolute mt-16 mr-32 rounded-full border-yellow-900 border-4 border-opacity-25"><i class="fas fa-shopping-basket fa-3x"></i><a href="{{ path('login_security') }}"></a></button>
       </a>
     </div>
     
     <div>
       {# Bouton pour filtre #}
       <a href="{{ path('login_security') }}">
-        <button class="z-50 bg-yellow-200 w-20 h-20 top-0 right-0 absolute mt-16 mr-8 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('login_security') }}"><i class="fas fa-filter fa-2x mt-2 mr-0"></i></button>
+        <button class="rotate z-50 bg-yellow-200 w-20 h-20 top-0 right-0 absolute mt-16 mr-8 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('login_security') }}"><i class="fas fa-filter fa-2x mt-2 mr-0"></i></button>
       </a>
     </div>
     
     <div>
       {# Bouton pour déconnecter #}
       <a href="{{ path('logout_security') }}">
-        <button class="z-50 bg-yellow-200 w-20 h-20 right-0 absolute bottom-4 mr-16 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('logout_security') }}"><i class="fas fa-sign-out fa-3x mr-0"></i></button>
+        <button class="rotate z-50 bg-yellow-200 w-20 h-20 right-0 absolute bottom-4 mr-16 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('logout_security') }}"><i class="fas fa-sign-out fa-3x mr-0"></i></button>
       </a>
     </div>
     
@@ -105,7 +105,7 @@
     </script>
 
 <style>
-  button:hover{
+  .rotate:hover{
     -webkit-transform: rotate(360deg);
     -webkit-transition-duration: 1s;
     -webkit-transition-delay: now;
