--- a/matete-web/templates/panel_prod/index.html.twig
+++ b/matete-web/templates/panel_prod/index.html.twig
@@ -5,112 +5,48 @@
 {% block body %}
 
 
-     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-        #info{
-            font-family: 'Bebas Neue', cursive;
-        }
-    </style> 
+{% include "include/maps.html.twig" %}
+{% include "include/mainPage.html.twig" %}
 
-
-  <script>
-    function initMap() {
-    const lycée = { lat: 42.69276266087135, lng: 2.909845647650987 };
-
-      const map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 15,
-        center: lycée,
-        //permet de cacher les boutons "Satellite" et "Plan"
-        mapTypeControl: false,
-        mapTypeControlOptions: {
-            style: google.maps.MapTypeControlStyle.VERTICAL_BAR,
-            position: google.maps.ControlPosition.TOP_RIGHT
-    },
-      });
+  {# "Pop-up" de gauche #}
+  <div class="z-50 bg-yellow-200 rounded-r-lg w-4/12 h-full left-0 absolute ">
+      {# Bouton Gestion de compte #}
+      <div> 
+        <a href="{{ path('producteur_show',{'id':app.user.id}) }}">
+          <button class="z-50 bg-yellow-900 w-20 h-20 left-10 absolute top-60 mr-16 border-yellow-900 border-4 border-opacity-25" onclick="{{ path('producteur_show',{'id':app.user.id}) }}"><i class="">test</i></button>
+        </a>
+      </div>
       
+      {# Image de profil #}
+      {% set foo = random(6) %}
+      <div class="left-5  mt-15 mr-20 relative flex flex-row ">
+          <img class="z-50 rounded-full relative w-48 h-40 mt-4 " src="{{ asset('image/' ~ foo ~ '.png') }}" alt="">
+          {# Information de l'utilisateur #}
+            <div class="text-2xl  ml-8 relative">
+            <p class="mt-4" id="info">Nom : {{app.user.nom}}</p>
+            <p class="mt-4" id="info">Prenom : {{app.user.prenom}}</p>
+            <p class="mt-4" id="info">Email : {{app.user.mail}}</p>
+            <p class="mt-4" id="info">Tel : {{app.user.tel}}</p>
+        </div>
+      </div>
 
-      {% for liste in listeAnnonces %}
+      <div>
+        {# Bouton pour ajouter #}
+        <a href="{{ path('annonce_new') }}">
+          <button class="z-50 bg-yellow-900 w-20 h-20 right-10 absolute bottom-4 mr-16 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('annonce_new') }}"><i class="">test</i></button>
+        </a>
+      </div>
+  </div>
 
-        var marker = new google.maps.Marker({
-          position: { lat: {{ liste.cooX }} , lng: {{liste.cooY}} },
-          map: map,
-        });
-      {% endfor %}
-    }
+  {# Map google #}
+  <div class=" h-screen w-9/12 right-0 absolute">
+    <div id="map" class="z-20 w-full h-full"></div>
+  </div>
+
+
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5t3C0OHeTuknC62DdKqOeqNPhMAhdITU&callback=initMap&libraries=&v=weekly"
+    async>
   </script>
     
-    <div>
-      {# Bouton panier #}
-      <a href="{{ path('login_security') }}">
-        <button class="rotate z-50 bg-yellow-200 w-20 h-20 absolute top-0 right-0 absolute mt-16 mr-32 rounded-full border-yellow-900 border-4 border-opacity-25"><i class="fas fa-shopping-basket fa-3x"></i><a href="{{ path('login_security') }}"></a></button>
-      </a>
-    </div>
-    
-    <div>
-      {# Bouton pour filtre #}
-      <a href="{{ path('login_security') }}">
-        <button class="rotate z-50 bg-yellow-200 w-20 h-20 top-0 right-0 absolute mt-16 mr-8 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('login_security') }}"><i class="fas fa-filter fa-2x mt-2 mr-0"></i></button>
-      </a>
-    </div>
-    
-    <div>
-      {# Bouton pour déconnecter #}
-      <a href="{{ path('logout_security') }}">
-        <button class="rotate z-50 bg-yellow-200 w-20 h-20 right-0 absolute bottom-4 mr-16 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('logout_security') }}"><i class="fas fa-sign-out fa-3x mr-0"></i></button>
-      </a>
-    </div>
-    
-
-    {# "Pop-up" de gauche #}
-    <div class="z-50 bg-yellow-200 rounded-r-lg w-4/12 h-full left-0 absolute ">
-        
-        <div>
-          {# Bouton Gestion de compte #}
-          <a href="{{ path('producteur_show',{'id':app.user.id}) }}">
-            <button class="z-50 bg-yellow-900 w-20 h-20 left-10 absolute top-60 mr-16 border-yellow-900 border-4 border-opacity-25" onclick="{{ path('producteur_show',{'id':app.user.id}) }}"><i class="">test</i></button>
-          </a>
-        </div>
-        
-        {# Image de profil #}
-        {% set foo = random(6) %}
-        <div class="left-5  mt-15 mr-20 relative flex flex-row ">
-            <img class="z-50 rounded-full relative w-48 h-40 mt-4 " src="{{ asset('image/' ~ foo ~ '.png') }}" alt="">
-            {# Information de l'utilisateur #}
-             <div class="text-2xl  ml-8 relative">
-              <p class="mt-4" id="info">Nom : {{app.user.nom}}</p>
-              <p class="mt-4" id="info">Prenom : {{app.user.prenom}}</p>
-              <p class="mt-4" id="info">Email : {{app.user.mail}}</p>
-              <p class="mt-4" id="info">Tel : {{app.user.tel}}</p>
-          </div>
-        </div>
-
-        <div>
-          {# Bouton pour ajouter #}
-          <a href="{{ path('annonce_new') }}">
-            <button class="z-50 bg-yellow-900 w-20 h-20 right-10 absolute bottom-4 mr-16 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('annonce_new') }}"><i class="">test</i></button>
-          </a>
-        </div>
-        
-        
-    </div>
-    {# Map google #}
-    <div class=" h-screen w-9/12 right-0 absolute">
-      <div id="map" class="z-20 w-full h-full"></div>
-    </div>
-
-
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5t3C0OHeTuknC62DdKqOeqNPhMAhdITU&callback=initMap&libraries=&v=weekly"
-      async>
-    </script>
-
-<style>
-  .rotate:hover{
-    -webkit-transform: rotate(360deg);
-    -webkit-transition-duration: 1s;
-    -webkit-transition-delay: now;
-    -webkit-animation-timing-function: linear;
-    -webkit-animation-iteration-count: infinite;
-  }
-</style>
 {% endblock %}
