--- a/matete-web/templates/include/notif.html.twig
+++ b/matete-web/templates/include/notif.html.twig
@@ -1,4 +1,4 @@
-{% for message in app.flashes('alert') %}
+{% for message in app.flashes('notice') %}
             <div class="bg-gray-100 flex justify-center  align-top ">
             <div class="fixed">
                 <div class="text-center w-56 m-6 p-6 bg-red-500 rounded-md ">
