--- a/matete-web/templates/security/login.html.twig
+++ b/matete-web/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello MainController!{% endblock %}
 
 {% block body %}
-
+{% include "include/notif.html.twig" %}
   <form method="POST" action="{{ path('login_security') }}">
         
         
