--- a/matete-web/templates/producteur/show.html.twig
+++ b/matete-web/templates/producteur/show.html.twig
@@ -80,9 +80,10 @@
                             <div class="mt-10 w-5/12 flex justify-center">
                                 <input type="submit" id="editInfo" name="editInfo" value="Confirmer" class="w-10/12 p-2.5  bg-yellow-300 rounded-lg cursor-pointer">
                             </div>
+</form>
                             {# Bouton submit "Supprimer" #}
                             <div class="mt-10 w-5/12 flex justify-center">
-                                <form action="{{ path('producteur_delete',{'id': app.user.id}) }}" method="GET">
+                                <form method="POST" action="{{ path('producteur_delete',{'id':producteur.id}) }}">
                                 <button type="submit" id="delAcc" name="delAcc" value="Supprimer" class="w-10/12 p-2.5  bg-red-600 rounded-lg cursor-pointer text-white"> Supprimer</button>
                                 </form>
                             </div>
@@ -97,7 +98,7 @@
                 
             </div>
 
- </form>
+ 
  {# Image de fond #}
  <div class="h-screen w-screen bg-no-repeat bg-cover" style="background-image:url('{{ asset('image/Carte.png') }}')"></div>
     
