--- a/matete-web/templates/main/index.html.twig
+++ b/matete-web/templates/main/index.html.twig
@@ -44,10 +44,59 @@
       <button class="rotate z-50 bg-yellow-200 w-20 h-20 top-0 right-0 absolute mt-16 mr-8 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('login_security') }}"><i class="fas fa-filter fa-2x mt-2 mr-0"></i></button>
     </a>  
     
+    
     <div class=" h-screen w-screen">
       <div id="map" class="z-20 w-full h-full"></div>
     </div>
 
+
+{# Popup Accueil#}
+    <div id="popupMain" class="z-50 shadow bg-white w-4/6 h-5/6 top-0 right-0 absolute mr-80 mt-20 mr-8 rounded-2xl">
+      {# Logo Matete #}
+            <div class="flex justify-center mt-10" >
+                <img class="w-3/12 h-3/12" src="{{ asset('image/logotexte.png') }}">
+            </div>
+      {# Ligne N°1 #}
+            <div class="flex justify-centrer mx-auto h-4/6 mr-8">
+                {# Colonne Gauche #}
+                <div class="flex justify-center mt-5 w-5/12 w-80 h-100">
+                <i class="fas fa-list-ul fa-3x "></i>
+                    
+                </div>
+                {# Colonne Milieu #}
+                <div class="flex-col justify-center mx-auto mt-5 w-5/12  text-center">
+                <img src="{{ asset('image/ApercuMobile.png') }}" class="w-full h-60 ">
+                  <label  class="text-center font-bold" for="TextPopupDroite">Mettre en vente vos produit est un jeu d'enfants grâce à note interface producteur pour commencer à mettre en vente votre produits !</label>
+                  
+                    
+                    
+                </div>
+                {# Colonne Droite #}    
+                <div class="flex-col justify-center mx-auto mt-5 w-5/12  text-center">
+                <img src="{{ asset('image/ApercuMobile.png') }}" class="w-full h-60 mb-10">
+                  <label  class="text-center font-bold" for="TextPopupDroite">Vous pouvez utilisez dès maintenant notre application mobile afin de consulter à n'importe quel moment ou endroit, les annonces disponible !</label>
+                  
+                    
+                    
+                </div>
+            </div>      
+          <div class="mt-4 flex justify-center ">
+          <button onclick="closeForm()" class="w-2/12 p-2.5  bg-yellow-300 border-yellow-900 rounded-lg font-bold"><a> Fermer </a></button>
+          </div>
+      
+      
+    </div>
+
+{# Script Fermeture Popup Accueil#}
+<script>
+      function openForm() {
+        document.getElementById("popupMain").style.display="block";
+      }
+      
+      function closeForm() {
+        document.getElementById("popupMain").style.display="none";
+      }
+    </script>
 
     
 
