--- a/matete-web/templates/main/index.html.twig
+++ b/matete-web/templates/main/index.html.twig
@@ -71,17 +71,17 @@
       {# Ligne N°1 #}
             <div class="flex justify-centrer mx-auto h-3/6 mr-8 mb-20">
                 {# Colonne Gauche #}
-                <div class="flex-col justify-center mx-auto mt-6 ml-4 w-5/12  text-center">
-                <img src="{{ asset('image/iconVisiteur.png') }}" class="mx-auto w-3/12 h-1/5 mb-2"><br>
-                  <label  class=" text-2xl text-center font-bold">Espace Visiteur</label><br><br>
+                <div class="flex-col justify-center mx-auto mt-6 ml-4 w-5/12  text-center ">
+                <img src="{{ asset('image/iconVisiteur.png') }}" class="mx-auto w-3/12 h-1/5 mt-20 mb-16 "><br> 
+                  <label  class=" text-2xl text-center font-bold ">Espace Visiteur</label><br><br>
                   <label  class="text-center font-bold" for="TextPopupDroite">Parcourez les annonces des producteurs rapidement grâce a notre carte intéractive ainsi que notre filtre !</label>
   
                     
                 </div>
                 <div class="z-30 w-px h-80 mt-20 mr-4 ml-4 bg-black relative mx-auto"></div>
                 {# Colonne Milieu #}
-                <div class="flex-col justify-center mx-auto mt-5 w-5/12  text-center">
-                <img src="{{ asset('image/FermierHat.png') }}" class="mx-auto w-5/12 h-1/5 mb-8">
+                <div class="flex-col justify-center mx-auto mt-5 w-5/12  text-center  ">
+                <img src="{{ asset('image/FermierHat.png') }}" class="mx-auto w-5/12 h-1/5 mt-20 mb-24">
                   <label  class="text-2xl text-center font-bold">Espace Producteur</label><br><br>
                   <label  class="text-center font-bold" for="TextPopupDroite">Mettre en vente vos produit est un jeu d'enfants grâce à note interface producteur pour commencer à mettre en vente votre produits !</label>
                   
@@ -91,7 +91,7 @@
                 <div class="z-30 w-px h-80 mt-20 mr-4 ml-4 bg-black relative mx-auto"></div>
                 {# Colonne Droite #}    
                 <div class="flex-col justify-center mx-auto mt-5 w-5/12  text-center">
-                <img src="{{ asset('image/ApercuMobile.png') }}" class="w-full h-60 ">
+                <img src="{{ asset('image/ApercuMobile.png') }}" class="w-full h-60 mb-2">
                 <label  class="text-2xl text-center font-bold ">Notre Application</label><br><br>
                   <label  class=" text-center font-bold" for="TextPopupDroite">Vous pouvez utilisez dès maintenant notre application mobile afin de consulter à n'importe quel moment ou endroit, les annonces disponible !</label>
                   
