--- a/matete-web/templates/annonce/new.html.twig
+++ b/matete-web/templates/annonce/new.html.twig
@@ -89,7 +89,7 @@
                         {# Bouton création de lieu #}    
                         <div class="mt-5 w-5/12 ">
                             <label for="pass"></label>
-                            <button type="submit" id="lieu" name="lieu" class="bg-yellow-300 rounded-lg my-1.5 mt-7 h-10 w-full p-1 focus:outline-none" required>Créer un Lieu</button>
+                            <button type="submit" id="lieu" name="lieu" class="bg-yellow-300 rounded-lg my-1.5 mt-7 h-10 w-full p-1 focus:outline-none" required><a href="{{ path('lieu_new') }}">Créer un lieu</a></button>
                         </div>
                     </div>
 
