--- a/matete-web/templates/include/maps.html.twig
+++ b/matete-web/templates/include/maps.html.twig
@@ -18,9 +18,9 @@
         mapTypeControlOptions: {
             style: google.maps.MapTypeControlStyle.VERTICAL_BAR,
             position: google.maps.ControlPosition.TOP_RIGHT
-    },
+        },
+        
       });
-      
 
       {% for liste in listeAnnonces %}
 
@@ -29,5 +29,19 @@
           map: map,
         });
       {% endfor %}
+
+      map.addListener("center_changed", () => {
+        // 3 seconds after the center of the map has changed, pan back to the
+        // marker.
+        window.setTimeout(() => {
+          map.panTo(marker.getPosition() as google.maps.LatLng);
+        }, 3000);
+      });
+
+      marker.addListener("click", () => {
+        map.setZoom(8);
+        map.setCenter(marker.getPosition() as google.maps.LatLng);
+      });
+
     }
   </script>
