--- a/matete-web/templates/include/maps.html.twig
+++ b/matete-web/templates/include/maps.html.twig
@@ -22,7 +22,7 @@
         
       });
 
-      {% for liste in listeAnnonces %}
+      {% for liste in listeLieux %}
 
         var marker = new google.maps.Marker({
           position: { lat: {{ liste.cooX }} , lng: {{liste.cooY}} },
@@ -30,18 +30,18 @@
         });
       {% endfor %}
 
-      map.addListener("center_changed", () => {
-        // 3 seconds after the center of the map has changed, pan back to the
-        // marker.
-        window.setTimeout(() => {
-          map.panTo(marker.getPosition() as google.maps.LatLng);
-        }, 3000);
-      });
+      // map.addListener("center_changed", () => {
+      //   // 3 seconds after the center of the map has changed, pan back to the
+      //   // marker.
+      //   window.setTimeout(() => {
+      //     map.panTo(marker.getPosition() as google.maps.LatLng);
+      //   }, 3000);
+      // });
 
-      marker.addListener("click", () => {
-        map.setZoom(8);
-        map.setCenter(marker.getPosition() as google.maps.LatLng);
-      });
+      // marker.addListener("click", () => {
+      //   map.setZoom(8);
+      //   map.setCenter(marker.getPosition() as google.maps.LatLng);
+      // });
 
     }
   </script>
