--- a/matete-web/templates/main/index.html.twig
+++ b/matete-web/templates/main/index.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
 {% include "include/notif.html.twig" %}
+{% include "include/maps.html.twig" %}
 
     <style>
           /* Shadow des interface du site */
@@ -23,25 +24,6 @@
           }
     </style>  
 
-  <script>
-    function initMap() {
-    const lycée = { lat: 42.69276266087135, lng: 2.909845647650987 };
-
-      const map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 15,
-        center: lycée,
-      });
-
-      {% for liste in listeAnnonces %}
-
-        var marker = new google.maps.Marker({
-          position: { lat: {{ liste.cooX }} , lng: {{liste.cooY}} },
-          map: map,
-        });
-      {% endfor %}    
-    
-    }
-  </script>
 
     <a href="{{ path('login_security') }}">
       <button class="rotate z-50 bg-yellow-200 w-20 h-20 absolute top-0 right-0 absolute mt-16 mr-32 rounded-full border-yellow-900 border-4 border-opacity-25"><i class="fas fa-shopping-basket fa-3x"></i><a href="{{ path('login_security') }}"></a></button>
